--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,8 @@ add_subdirectory(src/mkdb)
 add_subdirectory(src/compile_et)
 add_subdirectory(src/file2c)
 add_subdirectory(src/find)
+add_simple_crossbuild_program(gensnmptree contrib/bsnmp/gensnmptree/ SOURCES gensnmptree.c)
+target_include_directories(gensnmptree PRIVATE ${CHERIBSD_DIR}/contrib/bsnmp/lib)
 add_subdirectory(src/grep)
 add_subdirectory(src/config)
 add_subdirectory(src/makefs)
