--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -2,11 +2,6 @@
 # Build /usr/sbin/config
 set(SOURCE_PATH ${CHERIBSD_DIR}/usr.sbin/config)
 
-add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/y.tab.c" MAIN_DEPENDENCY ${SOURCE_PATH}/config.y
-        BYPRODUCTS "${CMAKE_CURRENT_BINARY_DIR}/y.tab.h"
-        COMMAND FreeBSD::yacc -d "${SOURCE_PATH}/config.y" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/config.c" MAIN_DEPENDENCY "${CMAKE_CURRENT_BINARY_DIR}/y.tab.c"
-        COMMAND cp -f "${CMAKE_CURRENT_BINARY_DIR}/y.tab.c" "${CMAKE_CURRENT_BINARY_DIR}/config.c" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/lang.c" MAIN_DEPENDENCY ${SOURCE_PATH}/lang.l
         COMMAND $<TARGET_FILE:lex> -olang.c "${SOURCE_PATH}/lang.l" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 # need to set this as a single argument to make sure CMAKE escapes it properly
@@ -19,10 +14,11 @@ set(config_SRCS
     mkmakefile.c
     mkheaders.c
     mkoptions.c
-    ${CMAKE_CURRENT_BINARY_DIR}/config.c
     ${CMAKE_CURRENT_BINARY_DIR}/lang.c
     ${CMAKE_CURRENT_BINARY_DIR}/kernconf.c
 )
+add_yacc_source(config_SRCS ${SOURCE_PATH}/config.y BASENAME y.tab)
+
 add_crossbuild_executable(config SOURCE_PATH ${SOURCE_PATH} SOURCES ${config_SRCS})
 target_link_libraries(config PRIVATE FreeBSD::libsbuf)
 
