--- a/src/find/CMakeLists.txt
+++ b/src/find/CMakeLists.txt
@@ -1,8 +1,7 @@
-set(find_SRCS find.c function.c ls.c main.c misc.c operator.c option.c ${CMAKE_CURRENT_BINARY_DIR}/y.tab.c)
+set(find_SRCS find.c function.c ls.c main.c misc.c operator.c option.c)
 
-add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/y.tab.c" "${CMAKE_CURRENT_BINARY_DIR}/y.tab.h" MAIN_DEPENDENCY ${CHERIBSD_DIR}/usr.bin/find/getdate.y
-        COMMAND Bootstrap::yacc -d ${CHERIBSD_DIR}/usr.bin/find/getdate.y
-        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+add_yacc_source(find_SRCS ${CHERIBSD_DIR}/usr.bin/find/getdate.y BASENAME y.tab)
+
 if(APPLE)
     list(APPEND find_SRCS ${CHERIBSD_DIR}/lib/libc/locale/rpmatch.c)
 endif()
