--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -2,8 +2,6 @@
 # Build /usr/sbin/config
 set(SOURCE_PATH ${CHERIBSD_DIR}/usr.sbin/config)
 
-add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/lang.c" MAIN_DEPENDENCY ${SOURCE_PATH}/lang.l
-        COMMAND $<TARGET_FILE:lex> -olang.c "${SOURCE_PATH}/lang.l" WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 # need to set this as a single argument to make sure CMAKE escapes it properly
 set(file2c_arg "char kernconfstr[] = {' ',0};")
 add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/kernconf.c" MAIN_DEPENDENCY ${SOURCE_PATH}/kernconf.tmpl
@@ -14,10 +12,10 @@ set(config_SRCS
     mkmakefile.c
     mkheaders.c
     mkoptions.c
-    ${CMAKE_CURRENT_BINARY_DIR}/lang.c
     ${CMAKE_CURRENT_BINARY_DIR}/kernconf.c
 )
 add_yacc_source(config_SRCS ${SOURCE_PATH}/config.y BASENAME y.tab)
+add_lex_source(config_SRCS ${SOURCE_PATH}/lang.l)
 
 add_crossbuild_executable(config SOURCE_PATH ${SOURCE_PATH} SOURCES ${config_SRCS})
 target_link_libraries(config PRIVATE FreeBSD::libsbuf)
