Build usr.bin/fortune/strfile
Needed for -DWITH_GAMES

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,7 @@ add_subdirectory(src/mtree)
 add_subdirectory(src/rpcgen)
 add_subdirectory(src/sh)
 add_subdirectory(src/sort)
+add_simple_crossbuild_program(strfile usr.bin/fortune/strfile strfile.c)
 add_simple_crossbuild_program(tsort usr.bin/tsort tsort.c)
 target_include_directories(tsort PRIVATE ${CHERIBSD_DIR}/contrib/uthash/src)
 if(LINUX)
