Build the FreeBSD version of BDB
The linux one seems different which means I can't log in to the FreeBSD
disk-images create on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,9 +163,7 @@ add_subdirectory(src/sort)
 add_simple_crossbuild_program(strfile usr.bin/fortune/strfile strfile.c)
 add_simple_crossbuild_program(tsort usr.bin/tsort tsort.c)
 target_include_directories(tsort PRIVATE ${CHERIBSD_DIR}/contrib/uthash/src)
-if(LINUX)
-    target_link_libraries(tsort PRIVATE db)
-endif()
+target_link_libraries(tsort PRIVATE FreeBSD::libdb)
 add_simple_crossbuild_program(uuencode usr.bin/uuencode uuencode.c)
 add_simple_crossbuild_program(uudecode usr.bin/uudecode uudecode.c)
 if(LINUX OR APPLE)
