Don't build bin/sh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,7 +158,8 @@ add_subdirectory(src/config)
 add_subdirectory(src/makefs)
 add_subdirectory(src/mtree)
 add_subdirectory(src/rpcgen)
-add_subdirectory(src/sh)
+# I think we can just use the host sh
+# add_subdirectory(src/sh)
 add_subdirectory(src/sort)
 add_simple_crossbuild_program(strfile usr.bin/fortune/strfile strfile.c)
 add_simple_crossbuild_program(tsort usr.bin/tsort tsort.c)
